# rug_control_methods

./: README.md
rug_panda_controllers/: CMakeLists.txt  franka_example_controllers_plugin.xml  package.xml
rug_panda_controllers/config/: rug_panda_controllers.yaml
rug_panda_controllers/include/rug_panda_controllers/: example_jointspace_controller.h  example_workspace_controller.h
rug_panda_controllers/launch/: controller.launch
rug_panda_controllers/src/example_jointspace_controller/: init.cpp  starting.cpp  target_callback.cpp  update.cpp
rug_panda_controllers/src/example_workspace_controller/: init.cpp  starting.cpp  target_callback.cpp  update.cpp
rug_panda_planners/: CMakeLists.txt  package.xml  setup.py
rug_panda_planners/launch/: interactive.launch  planner.launch  sinusoidal_trajectory.launch
rug_panda_planners/launch/rviz/: marker.rviz
rug_panda_planners/scripts/: interactive.py  sinusoidal_trajectory.py
rug_panda_planners/src/: controller_interface.py  moveit_fk.py  moveit_ik.py
rug_panda_worlds/: CMakeLists.txt  package.xml
rug_panda_worlds/launch/: panda.launch  robot.launch
rug_panda_worlds/models/box_table/: model.config  model.sdf
rug_panda_worlds/models/keyboard/: model.config  model.sdf  model.urdf
rug_panda_worlds/world/: keyboard.sdf  stone.sdf
